--- a/fichas/css/custom.css
+++ b/fichas/css/custom.css
@@ -2,5 +2,7 @@ body {
 	background-color: white;
 }
 .box {
-	box-shadow: 0px 0px 10px 0px #aaa !important;
+	-webkit-box-shadow: 0px 0px 8px 2px rgba(240,240,240,1);
+	-moz-box-shadow: 0px 0px 8px 2px rgba(240,240,240,1);
+	box-shadow: 0px 0px 8px 2px rgba(240,240,240,1);
 }
